create informational pages

--- a/InfoEarring_1.htm
+++ b/InfoEarring_1.htm
@@ -13,13 +13,13 @@
         <a href="shpoInfo.html" class=" distanceRight">
             <img src="Logo2.png" style="vertical-align: middle;">
         </a>
-        <span><p class=" inline">Огърлица</p></span>
+        <span><p class=" inline">Обица</p></span>
     </header>
 
     <main>
-        <img src="Necklesess/N1.png" style="vertical-align: middle;">
+        <img src="Earrings/E18.png" style="vertical-align: middle;">
         <span>
-            <p class=" info" style="line-height: 200%;">Име: Светът<br>Вид бижу: Огърлица<br>Тегло: 500гр<br>Материал: Сребро<br>Цена: 120.00 лв<br></p>
+            <p class=" info" style="line-height: 145%;">Име: Рубинени очи<br>Вид бижу: Обица<br>Тегло: 50гр<br>Материал: Сребро<br>Цена: 70.00 лв<br></p>
         </span>
     </main>
 
