--- a/braselets.html
+++ b/braselets.html
@@ -17,8 +17,11 @@
     </header>
 
     <div class="gallery">
-        <img class="gallery" src="Bracelet/B1.png">
+        <a href="InfoBracelet_1.html" class=" distanceRight">
+            <img class="gallery" src="Bracelet/B1.png">
+        </a>
     </div>
+
     <div class="gallery">
         <img class="gallery" src="Bracelet/B2.png">
     </div>
