--- a/earrings.html
+++ b/earrings.html
@@ -17,8 +17,11 @@
     </header>
 
     <div class="gallery">
-        <img class="gallery" src="Earrings/E18.png">
+        <a href="InfoEarring_1.htm" class=" distanceRight">
+            <img class="gallery" src="Earrings/E18.png">
+        </a>
     </div>
+
     <div class="gallery">
         <img class="gallery" src="Earrings/E10.png">
     </div>
