--- a/rings.html
+++ b/rings.html
@@ -17,8 +17,11 @@
     </header>
 
     <div class="gallery">
-        <img class="gallery" src="Rings/R1.png">
+        <a href="InfoRing_1.html" class=" distanceRight">
+            <img class="gallery" src="Rings/R1.png">
+        </a>
     </div>
+
     <div class="gallery">
         <img class="gallery" src="Rings/R2.png">
     </div>
