--- a/InfoBracelet_1.html
+++ b/InfoBracelet_1.html
@@ -13,13 +13,13 @@
         <a href="shpoInfo.html" class=" distanceRight">
             <img src="Logo2.png" style="vertical-align: middle;">
         </a>
-        <span><p class=" inline">Огърлица</p></span>
+        <span><p class=" inline">Фривна</p></span>
     </header>
 
     <main>
-        <img src="Necklesess/N1.png" style="vertical-align: middle;">
+        <img src="Bracelet/B1.png" style="vertical-align: middle;">
         <span>
-            <p class=" info" style="line-height: 200%;">Име: Светът<br>Вид бижу: Огърлица<br>Тегло: 500гр<br>Материал: Сребро<br>Цена: 120.00 лв<br></p>
+            <p class=" info" style="line-height: 220%;">Име: Дъждовни капки<br>Вид бижу: Гривна<br>Тегло: 100гр<br>Материал: Злато<br>Цена: 150.00 лв<br></p>
         </span>
     </main>
 
