set default size to the informational pictures

--- a/InfoBracelet_1.html
+++ b/InfoBracelet_1.html
@@ -17,9 +17,9 @@
     </header>
 
     <main>
-        <img src="Bracelet/B1.png" style="vertical-align: middle;">
+        <img class=" info" src="Bracelet/B1.png" style="vertical-align: middle;">
         <span>
-            <p class=" info" style="line-height: 220%;">Име: Дъждовни капки<br>Вид бижу: Гривна<br>Тегло: 100гр<br>Материал: Злато<br>Цена: 150.00 лв<br></p>
+            <p class=" info">Име: Дъждовни капки<br>Вид бижу: Гривна<br>Тегло: 100гр<br>Материал: Злато<br>Цена: 150.00 лв<br></p>
         </span>
     </main>
 
