--- a/InfoEarring_1.htm
+++ b/InfoEarring_1.htm
@@ -17,9 +17,9 @@
     </header>
 
     <main>
-        <img src="Earrings/E18.png" style="vertical-align: middle;">
+        <img class=" info" src="Earrings/E18.png" style="vertical-align: middle;">
         <span>
-            <p class=" info" style="line-height: 145%;">Име: Рубинени очи<br>Вид бижу: Обица<br>Тегло: 50гр<br>Материал: Сребро<br>Цена: 70.00 лв<br></p>
+            <p class=" info">Име: Рубинени очи<br>Вид бижу: Обица<br>Тегло: 50гр<br>Материал: Сребро<br>Цена: 70.00 лв<br></p>
         </span>
     </main>
 
