--- a/InfoNecless_1.html
+++ b/InfoNecless_1.html
@@ -17,9 +17,9 @@
     </header>
 
     <main>
-        <img src="Necklesess/N1.png" style="vertical-align: middle;">
+        <img class=" info" src="Necklesess/N1.png" style="vertical-align: middle;">
         <span>
-            <p class=" info" style="line-height: 200%;">Име: Светът<br>Вид бижу: Огърлица<br>Тегло: 500гр<br>Материал: Сребро<br>Цена: 120.00 лв<br></p>
+            <p class=" info" >Име: Светът<br>Вид бижу: Огърлица<br>Тегло: 500гр<br>Материал: Сребро<br>Цена: 120.00 лв<br></p>
         </span>
     </main>
 
