--- a/InfoRing_1.html
+++ b/InfoRing_1.html
@@ -17,9 +17,9 @@
     </header>
 
     <main>
-        <img src="Rings/R1.png" style="vertical-align: middle;">
+        <img class=" info" src="Rings/R1.png" style="vertical-align: middle;">
         <span>
-            <p class=" info" style="line-height: 135%;">Име: Щит<br>Вид бижу: Пръстен<br>Тегло: 50гр<br>Материал: Сребро<br>Цена: 120.00 лв<br></p>
+            <p class=" info" >Име: Щит<br>Вид бижу: Пръстен<br>Тегло: 50гр<br>Материал: Сребро<br>Цена: 120.00 лв<br></p>
         </span>
     </main>
 
