add contact and location info

--- a/shpoInfo.html
+++ b/shpoInfo.html
@@ -20,11 +20,23 @@
         <font face="Courier New"><i>Бижутерски магазин</i></font>
     </h1>
     <p class=" BigSize">
-        Търговия със злато, скъпоценни камъни и други благородни метали.
+        <b>Търговия със злато, скъпоценни камъни и други благородни метали. <br>Поправка на бижута и поръчки.</b>
     </p>
-    <p class=" BigSize">
-        Поправка на бижута и поръчки.
-    </p>
+
+    <table>
+        <tr>
+            <th>
+                <p class=" BigSize">София <br> ул. Георги С. Раковски №70<br> тел.: +359 000 00 00 00<br> Работно време:<br> ПОНЕДЕЛНИК–ПЕТЪК: <br> 10.00 –19.00ч.<br> СЪБОТА: 10.00 – 19.00ч. <br> НЕДЕЛЯ: Почивен ден<br></p>
+            </th>
+            <th>
+                <p class=" BigSize">София<br> ул. Георги С. Раковски №70<br> тел.: +359 000 00 00 00<br> Работно време:<br> ПОНЕДЕЛНИК–ПЕТЪК:
+                    <br> 10.00 –19.00ч.<br> СЪБОТА: 10.00 – 19.00ч. <br> НЕДЕЛЯ: Почивен ден<br></p>
+            </th>
+            <th>
+                <p class=" BigSize">София<br> бул. Черни връх №100, ет.1,<br> тел.: +359 000 00 00 00<br> Работно време:<br> ПОНЕДЕЛНИК-НЕДЕЛЯ: <br>11.00 – 21.00ч.<br></p>
+            </th>
+        </tr>
+    </table>
 
     <footer>
         <h2 class=" inline">Copyright © XXXXXXX.com</h2>
