create rating page

--- a/navigation.html
+++ b/navigation.html
@@ -28,6 +28,9 @@
         <div class=" column">
             <a href="braselets.html" target="index"><button>Гривни</button></a><br>
         </div>
+        <div class=" column">
+            <a href="Rateing.html" target="index"><button>Мнение</button></a><br>
+        </div>
     </div>
 </body>
 
