--- a/shpoInfo.html
+++ b/shpoInfo.html
@@ -20,7 +20,7 @@
         <font face="Courier New"><i>Бижутерски магазин</i></font>
     </h1>
     <p class=" BigSize">
-        <b>Търговия със злато, скъпоценни камъни и други благородни метали. <br>Поправка на бижута и поръчки.</b>
+        <b>&nbsp;Търговия със злато, скъпоценни камъни и други благородни метали. <br>&nbsp;Поправка на бижута и поръчки.</b>
     </p>
 
     <table>
