remove 'frameset' borders

--- a/Rateing.html
+++ b/Rateing.html
@@ -28,7 +28,13 @@
     <form class=" BigSize">
         Kолко лесно намирате продукти? <br>
         <input type="text"><br> <br> Достатъчно описателни ли са страниците? <br> Да: <input type="radio" name="answer" value="yes"> <br> Не: <input type="radio" name="answer" value="no"> <br><br> Удобно ли е преживяването ви по време на пазаруването?
-        <br> Да: <input type="radio" name="answer2" value="yes2"> <br> Не: <input type="radio" name="answer2" value="no2"> <br><br> Как, според вас, бихме могли да подобрим обслужването? <br>
+        <br> Да: <input type="radio" name="answer2" value="yes2"> <br> Не: <input type="radio" name="answer2" value="no2"> <br><br>
+
+        <!-- Бихте ли препоръчали магазинът ни на приятел? <br>
+        Да: <input type="radio" name = "answer3" value="yes3"> <br>
+        Не: <input type="radio" name = "answer3" value="no3"> <br><br> -->
+
+        Как, според вас, бихме могли да подобрим обслужването? <br>
         <input type="text"><br>
     </form>
     <footer>
