--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Магазин за колиета</title>
 </head>
 
-<frameset cols="120px,*" style="border-color: grey;">
+<frameset cols="120px,*" frameborder="no" style="border-color: grey;">
     <frame src="navigation.html" name="navigation" />
     <frame src="shpoInfo.html" name="index" srolling="yes" />
 </frameset>
