--- a/navigation.html
+++ b/navigation.html
@@ -7,9 +7,9 @@
     <title>Navigation</title>
 </head>
 
-<header>
+<!-- <header>
     <img src="Logo2.png" style="vertical-align: middle;">
-</header>
+</header> -->
 
 <body style="background-image: url('Background3.png'); background-repeat: repeat-y;">
     <div class="row">
