create good looking buttons

--- a/Neclesses.html
+++ b/Neclesses.html
@@ -69,7 +69,7 @@
     </div>
 
     <footer>
-        <h2 class=" inline">Copyright © XXXXXXX.com</h2>
+        <h2 class=" inline">Даниел Паскалев 11В No3</h2>
     </footer>
 </body>
 
