--- a/navigation.html
+++ b/navigation.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="PageStyle.css" rel="stylesheet" type="text/css">
     <title>Navigation</title>
 </head>
 
@@ -12,26 +13,135 @@
 </header> -->
 
 <body style="background-image: url('Background3.png'); background-repeat: repeat-y;">
-    <div class="row">
-        <div class=" column">
-            <a href="shpoInfo.html" target="index"><button>Начало</button></a><br>
-        </div>
-        <div class=" column">
-            <a href="Neclesses.html" target="index"><button>Огърлици</button></a>
-        </div>
-        <div class=" column">
-            <a href="earrings.html" target="index"><button>Обици</button></a><br>
-        </div>
-        <div class=" column">
-            <a href="rings.html" target="index"><button>Пръстени</button></a><br>
-        </div>
-        <div class=" column">
-            <a href="braselets.html" target="index"><button>Гривни</button></a><br>
-        </div>
-        <div class=" column">
-            <a href="Rateing.html" target="index"><button>Мнение</button></a><br>
-        </div>
-    </div>
+
+    <!-- <table class=" navigation">
+        <tr>
+            <nav>
+                <ul>
+                    <a href="shpoInfo.html" target="index">
+                        <li>
+                            Начало
+                            <span></span><span></span><span></span><span></span>
+                        </li>
+                    </a>
+                </ul>
+            </nav>
+        </tr>
+        <tr>
+            <nav>
+                <ul>
+                    <a href="Neclesses.html" target="index">
+                        <li>
+                            Огърлици
+                            <span></span><span></span><span></span><span></span>
+                        </li>
+                    </a>
+                </ul>
+            </nav>
+        </tr>
+    </table> -->
+
+    <!-- <nav>
+        <ul>
+            <a href="shpoInfo.html" target="index">
+                <li>
+                    Начало
+                    <span></span><span></span><span></span><span></span>
+                </li>
+            </a>
+        </ul>
+    </nav>
+    <nav>
+        <ul>
+            <a href="Neclesses.html" target="index">
+                <li>
+                    Огърлици
+                    <span></span><span></span><span></span><span></span>
+                </li>
+            </a>
+        </ul>
+    </nav>
+    <nav>
+        <ul>
+            <a href="earrings.html" target="index">
+                <li>
+                    Обици
+                    <span></span><span></span><span></span><span></span>
+                </li>
+            </a>
+        </ul>
+    </nav>
+    <nav>
+        <ul>
+            <a href="rings.html" target="index">
+                <li>
+                    Пръстени
+                    <span></span><span></span><span></span><span></span>
+                </li>
+            </a>
+        </ul>
+    </nav>
+    <nav>
+        <ul>
+            <a href="braselets.html" target="index">
+                <li>
+                    Гривни
+                    <span></span><span></span><span></span><span></span>
+                </li>
+            </a>
+        </ul>
+    </nav>
+    <nav>
+        <ul>
+            <a href="Rateing.html" target="index">
+                <li>
+                    Мнение
+                    <span></span><span></span><span></span><span></span>
+                </li>
+            </a>
+        </ul>
+    </nav> -->
+
+    <nav>
+        <ul>
+            <a href="shpoInfo.html" target="index">
+                <li>
+                    Начало
+                    <span></span><span></span><span></span><span></span>
+                </li>
+            </a>
+            <a href="Neclesses.html" target="index">
+                <li>
+                    Огърлици
+                    <span></span><span></span><span></span><span></span>
+                </li>
+            </a>
+            <a href="earrings.html" target="index">
+                <li>
+                    Обици
+                    <span></span><span></span><span></span><span></span>
+                </li>
+            </a>
+            <a href="rings.html" target="index">
+                <li>
+                    Пръстени
+                    <span></span><span></span><span></span><span></span>
+                </li>
+            </a>
+            <a href="braselets.html" target="index">
+                <li>
+                    Гривни
+                    <span></span><span></span><span></span><span></span>
+                </li>
+            </a>
+            <a href="Rateing.html" target="index">
+                <li>
+                    Мнение
+                    <span></span><span></span><span></span><span></span>
+                </li>
+            </a>
+        </ul>
+    </nav>
 </body>
 
 </html>
