--- a/shpoInfo.html
+++ b/shpoInfo.html
@@ -39,7 +39,7 @@
     </table>
 
     <footer>
-        <h2 class=" inline">Copyright © XXXXXXX.com</h2>
+        <h2 class=" inline">Даниел Паскалев 11В No3</h2>
     </footer>
 </body>
 
