--- a/InfoBracelet_1.html
+++ b/InfoBracelet_1.html
@@ -24,7 +24,7 @@
     </main>
 
     <footer>
-        <h2 class=" inline">Copyright © XXXXXXX.com</h2>
+        <h2 class=" inline">Даниел Паскалев 11В No3</h2>
     </footer>
 </body>
 
