--- a/Rateing.html
+++ b/Rateing.html
@@ -21,24 +21,29 @@
     </h1>
 
     <p class=" BigSize">
-        <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
         Бихте ли споделили вашето мнение за качеството на нашите услуги?
     </p>
 
     <form class=" BigSize">
         Kолко лесно намирате продукти? <br>
-        <input type="text"><br> <br> Достатъчно описателни ли са страниците? <br> Да: <input type="radio" name="answer" value="yes"> <br> Не: <input type="radio" name="answer" value="no"> <br><br> Удобно ли е преживяването ви по време на пазаруването?
-        <br> Да: <input type="radio" name="answer2" value="yes2"> <br> Не: <input type="radio" name="answer2" value="no2"> <br><br>
-
-        <!-- Бихте ли препоръчали магазинът ни на приятел? <br>
-        Да: <input type="radio" name = "answer3" value="yes3"> <br>
-        Не: <input type="radio" name = "answer3" value="no3"> <br><br> -->
-
-        Как, според вас, бихме могли да подобрим обслужването? <br>
+        <input type="text"><br> Достатъчно описателни ли са страниците? <br> - Да: <input type="radio" name="answer" value="yes"> <br> - Не: <input type="radio" name="answer" value="no"> <br> Удобно ли е преживяването ви по време на пазаруването?<br>        - Да: <input type="radio" name="answer2" value="yes2"> <br> - Не: <input type="radio" name="answer2" value="no2"> <br> Как, според вас, бихме могли да подобрим обслужването? <br>
         <input type="text"><br>
+        <!-- <input type="submit" value="Изпрати"> -->
     </form>
+
+    <nav style="margin-left: 4%;">
+        <ul>
+            <a href="shpoInfo.html" target="index">
+                <li>
+                    Изпрати
+                    <span></span><span></span><span></span><span></span>
+                </li>
+            </a>
+        </ul>
+    </nav>
+
     <footer>
-        <h2 class=" inline">Copyright © XXXXXXX.com</h2>
+        <h2 class=" inline">Даниел Паскалев 11В No3</h2>
     </footer>
 </body>
 
